--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,12 @@
     "\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
+    "# import urllib.parse\n",
     "import requests\n",
     "import pymongo\n",
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "from selenium import webdriver\n",
+    "from splinter import Browser"
    ]
   },
   {
