--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,20 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import dependencies\n",
     "\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "# import urllib.parse\n",
     "import requests\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
     "from selenium import webdriver\n",
     "from splinter import Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MarCO Mission Comes to an End\n",
+      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape news site for title and paragraph text, save off to variables\n",
+    "news_url = \"https://mars.nasa.gov/news/\"\n",
+    "driver = webdriver.Firefox()\n",
+    "driver.get(news_url)\n",
+    "html = driver.page_source\n",
+    "soup = bs(html, \"html.parser\")\n",
+    "\n",
+    "#news title\n",
+    "news_title = (soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
+    "print(news_title)\n",
+    "\n",
+    "#news paragraph\n",
+    "news_paragraph = soup.find(\"div\", class_=\"'article_teaser_body\").text\n",
+    "print(news_paragraph)"
    ]
   },
   {
