solved through news

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +40,14 @@
     "html = driver.page_source\n",
     "soup = bs(html, \"html.parser\")\n",
     "\n",
-    "#news title\n",
     "news_title = (soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
     "print(news_title)\n",
     "\n",
-    "#news paragraph\n",
-    "news_paragraph = soup.find(\"div\", class_=\"'article_teaser_body\").text\n",
-    "print(news_paragraph)"
+    "news_paragraph = soup.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "print(news_paragraph)\n",
+    "\n",
+    "#close firefox\n",
+    "driver.close()"
    ]
   },
   {
