--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -47,8 +47,45 @@
     "print(news_paragraph)\n",
     "\n",
     "#close firefox\n",
-    "driver.close()"
+    "driver.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA13911-1920x1200.jpg'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find featured Mars image from JPL, save full-size image URL\n",
+    "jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
+    "base_url = \"https://www.jpl.nasa.gov\"\n",
+    "driver = webdriver.Firefox()\n",
+    "driver.get(jpl_url)\n",
+    "html = driver.page_source\n",
+    "soup = bs(html, \"html.parser\")\n",
+    "\n",
+    "#build url from sytle tag\n",
+    "image_url  = soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
+    "featured_image_url = base_url + image_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
