solved through mars wx

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -38,54 +38,76 @@
     "driver = webdriver.Firefox()\n",
     "driver.get(news_url)\n",
     "html = driver.page_source\n",
-    "soup = bs(html, \"html.parser\")\n",
+    "news_soup = bs(html, \"html.parser\")\n",
     "\n",
-    "news_title = (soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
+    "news_title = (news_soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
     "print(news_title)\n",
     "\n",
-    "news_paragraph = soup.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
     "print(news_paragraph)\n",
     "\n",
     "#close firefox\n",
-    "driver.close()\n"
+    "driver.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA13911-1920x1200.jpg'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA16153-1920x1200.jpg\n"
+     ]
     }
    ],
    "source": [
-    "# find featured Mars image from JPL, save full-size image URL\n",
+    "# find featured Mars image from JPL, save full-size image url\n",
+    "# note: this url doesn't seem to pull up a Mars image any longer\n",
     "jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
     "base_url = \"https://www.jpl.nasa.gov\"\n",
     "driver = webdriver.Firefox()\n",
     "driver.get(jpl_url)\n",
     "html = driver.page_source\n",
-    "soup = bs(html, \"html.parser\")\n",
+    "img_soup = bs(html, \"html.parser\")\n",
     "\n",
     "#build url from sytle tag\n",
-    "image_url  = soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
-    "featured_image_url = base_url + image_url"
+    "image_url  = img_soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
+    "featured_image_url = base_url + image_url\n",
+    "print(featured_image_url)\n",
+    "driver.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "InSight sol 450 (2020-03-02) low -93.5ºC (-136.4ºF) high -10.4ºC (13.3ºF)\n",
+      "winds from the SSW at 5.5 m/s (12.4 mph) gusting to 20.6 m/s (46.1 mph)\n",
+      "pressure at 6.30 hPapic.twitter.com/82lzRqibcC\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape mars weather from twitter\n",
+    "mars_wx_url = \"https://twitter.com/MarsWxReport\"\n",
+    "\n",
+    "r = requests.get(mars_wx_url)\n",
+    "html = r.text\n",
+    "wx_soup = bs(html, \"html.parser\")\n",
+    "\n",
+    "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text\n",
+    "print(mars_weather)"
+   ]
   },
   {
    "cell_type": "code",
