solved through mars facts

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -98,15 +98,26 @@
     }
    ],
    "source": [
-    "# scrape mars weather from twitter\n",
+    "# scrape latest mars weather from twitter\n",
     "mars_wx_url = \"https://twitter.com/MarsWxReport\"\n",
-    "\n",
     "r = requests.get(mars_wx_url)\n",
     "html = r.text\n",
     "wx_soup = bs(html, \"html.parser\")\n",
     "\n",
     "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text\n",
     "print(mars_weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scrape Mars facts website, display as html table str using pandas\n",
+    "mars_facts_url = 'https://space-facts.com/mars/'\n",
+    "mars_df = pd.read_html(mars_facts_url)[0]\n",
+    "mars_facts_html = mars_df.to_html('mars_facts.html')"
    ]
   },
   {
