--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -110,13 +110,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>0</th>\n",
+      "      <th>1</th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>0</th>\n",
+      "      <td>Equatorial Diameter:</td>\n",
+      "      <td>6,792 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>1</th>\n",
+      "      <td>Polar Diameter:</td>\n",
+      "      <td>6,752 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>2</th>\n",
+      "      <td>Mass:</td>\n",
+      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>3</th>\n",
+      "      <td>Moons:</td>\n",
+      "      <td>2 (Phobos &amp; Deimos)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>4</th>\n",
+      "      <td>Orbit Distance:</td>\n",
+      "      <td>227,943,824 km (1.38 AU)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>5</th>\n",
+      "      <td>Orbit Period:</td>\n",
+      "      <td>687 days (1.9 years)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>6</th>\n",
+      "      <td>Surface Temperature:</td>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>7</th>\n",
+      "      <td>First Record:</td>\n",
+      "      <td>2nd millennium BC</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>8</th>\n",
+      "      <td>Recorded By:</td>\n",
+      "      <td>Egyptian astronomers</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
    "source": [
     "# scrape Mars facts website, display as html table str using pandas\n",
     "mars_facts_url = 'https://space-facts.com/mars/'\n",
     "mars_df = pd.read_html(mars_facts_url)[0]\n",
+    "\n",
+    "#diplay string\n",
+    "mars_facts_html_str = mars_df.to_html()\n",
+    "print(mars_facts_html_str)\n",
+    "\n",
+    "#write to html\n",
     "mars_facts_html = mars_df.to_html('mars_facts.html')"
    ]
   },
