--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,9 @@
     "\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "# import urllib.parse\n",
     "import requests\n",
     "import pymongo\n",
+    "import pprint \n",
     "from pymongo import MongoClient\n",
     "from selenium import webdriver\n",
     "from splinter import Browser"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,22 +44,19 @@
     "print(news_title)\n",
     "\n",
     "news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
-    "print(news_paragraph)\n",
-    "\n",
-    "#close firefox\n",
-    "driver.close()"
+    "print(news_paragraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA16153-1920x1200.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA17936-1920x1200.jpg\n"
      ]
     }
    ],
@@ -67,7 +64,7 @@
     "# find featured Mars image from JPL, save full-size image url\n",
     "# note: this url doesn't seem to pull up a Mars image any longer\n",
     "jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
-    "base_url = \"https://www.jpl.nasa.gov\"\n",
+    "base_jpl_url = \"https://www.jpl.nasa.gov\"\n",
     "driver = webdriver.Firefox()\n",
     "driver.get(jpl_url)\n",
     "html = driver.page_source\n",
@@ -75,25 +72,24 @@
     "\n",
     "#build url from sytle tag\n",
     "image_url  = img_soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
-    "featured_image_url = base_url + image_url\n",
+    "featured_image_url = base_jpl_url + image_url\n",
     "print(featured_image_url)\n",
     "driver.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "InSight sol 450 (2020-03-02) low -93.5ºC (-136.4ºF) high -10.4ºC (13.3ºF)\n",
-      "winds from the SSW at 5.5 m/s (12.4 mph) gusting to 20.6 m/s (46.1 mph)\n",
-      "pressure at 6.30 hPapic.twitter.com/82lzRqibcC\n",
-      "\n"
+      "('\\n'\n",
+      " 'InSight sol 450 (2020-03-02) low -93.5ºC (-136.4ºF) high -10.4ºC (13.3ºF)\\n'\n",
+      " 'winds from the SSW at 5.5 m/s (12.4 mph) gusting to 20.6 m/s (46.1 mph)\\n'\n",
+      " 'pressure at 6.30 hPapic.twitter.com/82lzRqibcC\\n')\n"
      ]
     }
    ],
@@ -105,12 +101,12 @@
     "wx_soup = bs(html, \"html.parser\")\n",
     "\n",
     "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text\n",
-    "print(mars_weather)"
+    "pprint.pprint(mars_weather)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +174,7 @@
    ],
    "source": [
     "# scrape Mars facts website, display as html table str using pandas\n",
-    "mars_facts_url = 'https://space-facts.com/mars/'\n",
+    "mars_facts_url = \"https://space-facts.com/mars/\"\n",
     "mars_df = pd.read_html(mars_facts_url)[0]\n",
     "\n",
     "#diplay string\n",
@@ -186,15 +182,48 @@
     "print(mars_facts_html_str)\n",
     "\n",
     "#write to html\n",
-    "mars_facts_html = mars_df.to_html('mars_facts.html')"
+    "mars_facts_html = mars_df.to_html(\"mars_facts.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+      "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg',\n",
+      "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg',\n",
+      "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg',\n",
+      "  'title': 'Valles Marineris Hemisphere Enhanced'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape USGS Astrogeology site for high res photos of hemispheres\n",
+    "usgs_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "browser = Browser('firefox')\n",
+    "browser.visit(usgs_url)\n",
+    "\n",
+    "#create list of titles and urls to loop through\n",
+    "hemisphere_list = [(a.text, a['href']) for a in browser.find_by_css('div[class=\"description\"] a')]\n",
+    "\n",
+    "hemisphere_dict = []\n",
+    "for title, hemisphere_url in hemisphere_list:\n",
+    "    temp_dict = {}\n",
+    "    temp_dict[\"title\"] = title\n",
+    "    browser.visit(hemisphere_url)\n",
+    "    temp_dict[\"img_url\"] = browser.find_by_css('img[class=\"wide-image\"]')['src']\n",
+    "    hemisphere_dict.append(temp_dict)\n",
+    "pprint.pprint(hemisphere_dict)\n",
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
