--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -6,95 +6,209 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape():\n",
-    "\n",
-    "    # import dependencies\n",
-    "    import pandas as pd\n",
-    "    from bs4 import BeautifulSoup as bs\n",
-    "    import requests\n",
-    "    import pymongo\n",
-    "    import pprint \n",
-    "    from pymongo import MongoClient\n",
-    "    from selenium import webdriver\n",
-    "    from splinter import Browser\n",
-    "\n",
-    "    # scrape news site for title and paragraph text, save off to variables\n",
-    "    news_url = \"https://mars.nasa.gov/news/\"\n",
-    "    driver = webdriver.Firefox()\n",
-    "    driver.get(news_url)\n",
-    "    driver.implicitly_wait(10)\n",
-    "    html = driver.page_source\n",
-    "    news_soup = bs(html, \"html.parser\")\n",
-    "\n",
-    "    news_title = (news_soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
-    "    print(news_title)\n",
-    "\n",
-    "    news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
-    "    print(news_paragraph)\n",
-    "\n",
-    "\n",
-    "    # find featured Mars image from JPL, save full-size image url\n",
-    "    # note: this url doesn't seem to pull up a Mars image any longer\n",
-    "    jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
-    "    base_jpl_url = \"https://www.jpl.nasa.gov\"\n",
-    "    driver = webdriver.Firefox()\n",
-    "    driver.get(jpl_url)\n",
-    "    html = driver.page_source\n",
-    "    img_soup = bs(html, \"html.parser\")\n",
-    "\n",
-    "    #build url from sytle tag\n",
-    "    image_url  = img_soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
-    "    featured_image_url = base_jpl_url + image_url\n",
-    "    print(featured_image_url)\n",
-    "\n",
-    "\n",
-    "    # scrape latest mars weather from twitter\n",
-    "    mars_wx_url = \"https://twitter.com/MarsWxReport\"\n",
-    "    r = requests.get(mars_wx_url)\n",
-    "    html = r.text\n",
-    "    wx_soup = bs(html, \"html.parser\")\n",
-    "\n",
-    "    mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text\n",
-    "\n",
-    "\n",
-    "    # scrape Mars facts website, display as html table str using pandas\n",
-    "    mars_facts_url = \"https://space-facts.com/mars/\"\n",
-    "    mars_df = pd.read_html(mars_facts_url)[0]\n",
-    "\n",
-    "    ##  print html string\n",
-    "    mars_facts_html_str = mars_df.to_html()\n",
-    "    pprint.pprint(mars_facts_html_str)\n",
-    "\n",
-    "    ## render html\n",
-    "    mars_facts_html = mars_df.to_html(\"mars_facts.html\")\n",
-    "\n",
-    "\n",
-    "    # scrape USGS Astrogeology site for high res photos of hemispheres\n",
-    "    usgs_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
-    "    browser = Browser('firefox')\n",
-    "    browser.visit(usgs_url)\n",
-    "\n",
-    "    #create list of titles and urls to loop through\n",
-    "    hemisphere_list = [(a.text, a['href']) for a in browser.find_by_css('div[class=\"description\"] a')]\n",
-    "\n",
-    "    hemisphere_dict = []\n",
-    "    for title, hemisphere_url in hemisphere_list:\n",
-    "        temp_dict = {}\n",
-    "        temp_dict[\"title\"] = title\n",
-    "        browser.visit(hemisphere_url)\n",
-    "        temp_dict[\"img_url\"] = browser.find_by_css('img[class=\"wide-image\"]')['src']\n",
-    "        hemisphere_dict.append(temp_dict)\n",
-    "    pprint.pprint(hemisphere_dict)\n",
-    "    driver.close()\n",
-    "    browser.quit()"
+    "# import dependencies\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import requests\n",
+    "import pymongo\n",
+    "import pprint \n",
+    "from pymongo import MongoClient\n",
+    "from selenium import webdriver\n",
+    "from splinter import Browser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NASA to Reveal Name of Its Next Mars Rover\n",
+      "After a months-long contest among students to name NASA's newest Mars rover, the agency will reveal the winning name — and the winning student — this Thursday. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape news site for title and paragraph text, save off to variables\n",
+    "news_url = \"https://mars.nasa.gov/news/\"\n",
+    "driver = webdriver.Firefox()\n",
+    "driver.get(news_url)\n",
+    "driver.implicitly_wait(10)\n",
+    "html = driver.page_source\n",
+    "news_soup = bs(html, \"html.parser\")\n",
+    "\n",
+    "news_title = (news_soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
+    "print(news_title)\n",
+    "\n",
+    "news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "print(news_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA16711-1920x1200.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find featured Mars image from JPL, save full-size image url\n",
+    "# note: this url doesn't seem to pull up a Mars image any longer\n",
+    "jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
+    "base_jpl_url = \"https://www.jpl.nasa.gov\"\n",
+    "driver = webdriver.Firefox()\n",
+    "driver.get(jpl_url)\n",
+    "html = driver.page_source\n",
+    "img_soup = bs(html, \"html.parser\")\n",
+    "\n",
+    "#build url from sytle tag\n",
+    "image_url  = img_soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
+    "featured_image_url = base_jpl_url + image_url\n",
+    "print(featured_image_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# scrape latest mars weather from twitter\n",
+    "mars_wx_url = \"https://twitter.com/MarsWxReport\"\n",
+    "r = requests.get(mars_wx_url)\n",
+    "html = r.text\n",
+    "wx_soup = bs(html, \"html.parser\")\n",
+    "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('<table border=\"1\" class=\"dataframe\">\\n'\n",
+      " '  <thead>\\n'\n",
+      " '    <tr style=\"text-align: right;\">\\n'\n",
+      " '      <th></th>\\n'\n",
+      " '      <th>0</th>\\n'\n",
+      " '      <th>1</th>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '  </thead>\\n'\n",
+      " '  <tbody>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>0</th>\\n'\n",
+      " '      <td>Equatorial Diameter:</td>\\n'\n",
+      " '      <td>6,792 km</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>1</th>\\n'\n",
+      " '      <td>Polar Diameter:</td>\\n'\n",
+      " '      <td>6,752 km</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>2</th>\\n'\n",
+      " '      <td>Mass:</td>\\n'\n",
+      " '      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>3</th>\\n'\n",
+      " '      <td>Moons:</td>\\n'\n",
+      " '      <td>2 (Phobos &amp; Deimos)</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>4</th>\\n'\n",
+      " '      <td>Orbit Distance:</td>\\n'\n",
+      " '      <td>227,943,824 km (1.38 AU)</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>5</th>\\n'\n",
+      " '      <td>Orbit Period:</td>\\n'\n",
+      " '      <td>687 days (1.9 years)</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>6</th>\\n'\n",
+      " '      <td>Surface Temperature:</td>\\n'\n",
+      " '      <td>-87 to -5 °C</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>7</th>\\n'\n",
+      " '      <td>First Record:</td>\\n'\n",
+      " '      <td>2nd millennium BC</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '    <tr>\\n'\n",
+      " '      <th>8</th>\\n'\n",
+      " '      <td>Recorded By:</td>\\n'\n",
+      " '      <td>Egyptian astronomers</td>\\n'\n",
+      " '    </tr>\\n'\n",
+      " '  </tbody>\\n'\n",
+      " '</table>')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape Mars facts website, display as html table str using pandas\n",
+    "mars_facts_url = \"https://space-facts.com/mars/\"\n",
+    "mars_df = pd.read_html(mars_facts_url)[0]\n",
+    "\n",
+    "##  print html string\n",
+    "mars_facts_html_str = mars_df.to_html()\n",
+    "pprint.pprint(mars_facts_html_str)\n",
+    "\n",
+    "## render html\n",
+    "mars_facts_html = mars_df.to_html(\"mars_facts.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+      "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg',\n",
+      "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg',\n",
+      "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg',\n",
+      "  'title': 'Valles Marineris Hemisphere Enhanced'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scrape USGS Astrogeology site for high res photos of hemispheres\n",
+    "usgs_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "browser = Browser('firefox')\n",
+    "browser.visit(usgs_url)\n",
+    "\n",
+    "#create list of titles and urls to loop through\n",
+    "hemisphere_list = [(a.text, a['href']) for a in browser.find_by_css('div[class=\"description\"] a')]\n",
+    "\n",
+    "hemisphere_dict = []\n",
+    "for title, hemisphere_url in hemisphere_list:\n",
+    "    temp_dict = {}\n",
+    "    temp_dict[\"title\"] = title\n",
+    "    browser.visit(hemisphere_url)\n",
+    "    temp_dict[\"img_url\"] = browser.find_by_css('img[class=\"wide-image\"]')['src']\n",
+    "    hemisphere_dict.append(temp_dict)\n",
+    "pprint.pprint(hemisphere_dict)"
+   ]
   }
  ],
  "metadata": {
