draft solution, needs table formatting

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -43,8 +43,7 @@
     "news_title = (news_soup.find(\"div\", class_=\"list_text\")).find(\"a\").text\n",
     "print(news_title)\n",
     "\n",
-    "news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
-    "print(news_paragraph)"
+    "news_paragraph = news_soup.find(\"div\", class_=\"article_teaser_body\").text"
    ]
   },
   {
@@ -72,8 +71,7 @@
     "\n",
     "#build url from sytle tag\n",
     "image_url  = img_soup.find(\"article\")[\"style\"].replace('background-image: url(','').replace(');', '')[1:-1]\n",
-    "featured_image_url = base_jpl_url + image_url\n",
-    "print(featured_image_url)"
+    "featured_image_url = base_jpl_url + image_url"
    ]
   },
   {
@@ -99,8 +97,7 @@
     "r = requests.get(mars_wx_url)\n",
     "html = r.text\n",
     "wx_soup = bs(html, \"html.parser\")\n",
-    "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text\n",
-    "print(mars_weather)"
+    "mars_weather = wx_soup.find_all(\"div\", class_=\"js-tweet-text-container\")[0].text"
    ]
   },
   {
@@ -189,7 +186,6 @@
     "\n",
     "##  print html string\n",
     "mars_facts_html_str = mars_df.to_html()\n",
-    "pprint.pprint(mars_facts_html_str)\n",
     "\n",
     "## render html\n",
     "mars_facts_html = mars_df.to_html(\"mars_facts.html\")"
@@ -230,8 +226,7 @@
     "    temp_dict[\"title\"] = title\n",
     "    browser.visit(hemisphere_url)\n",
     "    temp_dict[\"img_url\"] = browser.find_by_css('img[class=\"wide-image\"]')['src']\n",
-    "    hemisphere_dict.append(temp_dict)\n",
-    "pprint.pprint(hemisphere_dict)"
+    "    hemisphere_dict.append(temp_dict)"
    ]
   }
  ],
