clean up notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find featured Mars image from JPL, save full-size image url\n",
+    "# scrape featured Mars image from JPL, save full-size image url\n",
     "# note: this url doesn't seem to pull up a Mars image any longer\n",
     "jpl_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
     "base_jpl_url = \"https://www.jpl.nasa.gov\"\n",
@@ -79,7 +79,7 @@
     "mars_facts_url = \"https://space-facts.com/mars/\"\n",
     "mars_df = pd.read_html(mars_facts_url)[0]\n",
     "\n",
-    "##  print html string\n",
+    "##  html string\n",
     "mars_facts_html_str = mars_df.to_html()\n",
     "\n",
     "## render html\n",
@@ -108,13 +108,6 @@
     "    temp_dict[\"img_url\"] = browser.find_by_css('img[class=\"wide-image\"]')['src']\n",
     "    hemisphere_dict.append(temp_dict)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
